terraform/aws/hub-spoke-ssm/transit-gateway.tf
# -------------------------------
# Transit Gateway
# -------------------------------
resource "aws_ec2_transit_gateway" "lab" {
  amazon_side_asn                 = 64512
  auto_accept_shared_attachments  = "disable"
  default_route_table_association = "enable"
  default_route_table_propagation = "enable"
  dns_support                     = "enable"
  vpn_ecmp_support                = "enable"
  multicast_support               = "disable"

  tags = {
    Name = "lab-tgw"
  }
}
